--- a/src/static/themes/quake/quake.css
+++ b/src/static/themes/quake/quake.css
@@ -4,6 +4,11 @@
     --tridactyl-scrollbar-color: #131 var(--tridactyl-fg);
 }
 
+:root.TridactylThemeQuake.TridactylOwnNamespace {
+  scrollbar-color: var(--tridactyl-scrollbar-color);
+  scrollbar-width: thin;
+}
+
 :root.TridactylThemeQuake #completions .sectionHeader {
     display: none;
 }
